tests/baselines/reference/validNumberAssignments.errors.txt
validNumberAssignments.ts(4,5): error TS2322: Type 'number' is not assignable to type 'Object'.


==== validNumberAssignments.ts (1 errors) ====
    var x = 1;
    
    var a: any = x;
    var b: Object = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'Object'.
    var c: number = x;
    enum E { A };
    var d: E = x;
    var e = E.A;
    e = x;